--- a/VidCoder/Resources/ChapterMarkersRes.de.resx
+++ b/VidCoder/Resources/ChapterMarkersRes.de.resx
@@ -99,13 +99,13 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
   <data name="ChapterMarkersDialogTitle">
-    <value xml:space="preserve">Kapitelmarke</value>
+    <value xml:space="preserve">Kapitelmarkierungen</value>
   </data>
   <data name="DefaultChapterNamesRadioButton">
     <value xml:space="preserve">Standard Kapitelnamen verwenden</value>
   </data>
   <data name="CustomChapterNamesRadioButton">
-    <value xml:space="preserve">Verwenden Sie benutzerdefinierte Kapitelnamen:</value>
+    <value xml:space="preserve">Benutzerdefinierte Kapitelnamen verwenden:</value>
   </data>
   <data name="ImportFromCsvButton">
     <value xml:space="preserve">Von .csv importieren...</value>
