--- a/VidCoder/Resources/LogRes.de.resx
+++ b/VidCoder/Resources/LogRes.de.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ClearButton" xml:space="preserve">
-    <value>Löschen</value>
+    <value>Leeren</value>
   </data>
   <data name="LogWindowTitle" xml:space="preserve">
     <value>Protokoll</value>
