--- a/VidCoder/Resources/MainRes.de.resx
+++ b/VidCoder/Resources/MainRes.de.resx
@@ -136,25 +136,25 @@
     <value>Öffne Videodatei...</value>
   </data>
   <data name="OpenDiscFolder" xml:space="preserve">
-    <value>DVD/Blu-Ray-Ordner öffnen...</value>
+    <value> Öffne DVD/Blu-ray-Ordner...</value>
   </data>
   <data name="EnqueueMultipleFiles" xml:space="preserve">
-    <value>mehrerer Dateien...</value>
+    <value>Mehrere Dateien in Warteschlange einreihen...</value>
   </data>
   <data name="EnqueueMultipleTitles" xml:space="preserve">
-    <value>mehrere Titel...</value>
+    <value>Mehrere Titel in Warteschlange einreihen...</value>
   </data>
   <data name="ToolsMenu" xml:space="preserve">
-    <value>Werkzeuge</value>
+    <value>Einstellungen</value>
   </data>
   <data name="ImportPreset" xml:space="preserve">
-    <value>Einstellungen importieren</value>
+    <value>Voreinstellung importieren...</value>
   </data>
   <data name="ExportPreset" xml:space="preserve">
-    <value>Einstellungen exportieren</value>
+    <value>Voreinstellung exportieren...</value>
   </data>
   <data name="OptionsMenuItem" xml:space="preserve">
-    <value>Einstellungen...</value>
+    <value>Optionen...</value>
   </data>
   <data name="Play" xml:space="preserve">
     <value>Wiedergeben</value>
@@ -163,10 +163,10 @@
     <value>Bearbeiten</value>
   </data>
   <data name="OpenContainingFolder" xml:space="preserve">
-    <value>Übergeordneten Ordner öffnen</value>
+    <value>Öffne übergeordneten Ordner</value>
   </data>
   <data name="ClearCompleted" xml:space="preserve">
-    <value>alles löschen</value>
+    <value>Abgeschlossene entfernen</value>
   </data>
   <data name="ExitMenuItem" xml:space="preserve">
     <value>Beenden</value>
@@ -175,7 +175,7 @@
     <value>Fenster</value>
   </data>
   <data name="EncodingSettingsMenuItem" xml:space="preserve">
-    <value>Encoding-Einstellungen</value>
+    <value>Encodierungseinstellungen</value>
   </data>
   <data name="PreviewMenuItem" xml:space="preserve">
     <value>Vorschau</value>
@@ -205,13 +205,13 @@
     <value>Scanne Quelle...</value>
   </data>
   <data name="Recent" xml:space="preserve">
-    <value>Zuletzt</value>
+    <value>Zuletzt geöffnet</value>
   </data>
   <data name="DragFilesHereLabel" xml:space="preserve">
-    <value>(Oder ziehen Sie die Video-Dateien oder Ordner hier herein)</value>
+    <value>(Oder ziehen Sie die Video-Dateien oder Ordner hier hinein)</value>
   </data>
   <data name="ScanErrorLabel" xml:space="preserve">
-    <value>Fehler beim Scannen.</value>
+    <value>Es ist ein Fehler beim Scannen aufgetreten.</value>
   </data>
   <data name="AudioLabel" xml:space="preserve">
     <value>Audio:</value>
@@ -223,10 +223,10 @@
     <value>Untertitel:</value>
   </data>
   <data name="AddTrackButton" xml:space="preserve">
-    <value>Track hinzufügen</value>
+    <value>Tonspur hinzufügen</value>
   </data>
   <data name="ChapterMarkersLabel" xml:space="preserve">
-    <value>Kapitel-Marker:</value>
+    <value>Kapitel-Markierungen:</value>
   </data>
   <data name="EditButton" xml:space="preserve">
     <value>Bearbeiten...</value>
@@ -235,16 +235,16 @@
     <value>Ziel:</value>
   </data>
   <data name="DestinationToolTip" xml:space="preserve">
-    <value>Zum Auswählen des Zielordners der Enkodierung klicken.</value>
+    <value>Zum Auswählen des Zielordners der Encodierung klicken.</value>
   </data>
   <data name="SelectOutputPathButton" xml:space="preserve">
-    <value>Ausgangs-Pfad wählen...</value>
+    <value>Ausgabepfad wählen...</value>
   </data>
   <data name="EncodingLabel" xml:space="preserve">
-    <value>Codierung:</value>
+    <value>Encodierung:</value>
   </data>
   <data name="Stop" xml:space="preserve">
-    <value>Beenden</value>
+    <value>Stoppen</value>
   </data>
   <data name="Pause" xml:space="preserve">
     <value>Pause</value>
@@ -265,13 +265,13 @@
     <value>Durchschnittliche FPS:</value>
   </data>
   <data name="PickDiscFolderHelpText" xml:space="preserve">
-    <value>Wählen Sie einen DVD oder Blu-Ray-Ordner.</value>
+    <value>Wählen Sie einen DVD oder Blu-ray-Ordner.</value>
   </data>
   <data name="EncodesInProgressExitWarning" xml:space="preserve">
-    <value>Die Kodierung ist noch nicht abgeschlossen, sind Sie sicher, dass Sie aufhören möchten?</value>
+    <value>Die Encodierung ist noch nicht abgeschlossen. Sind Sie sicher, dass Sie aufhören möchten?</value>
   </data>
   <data name="EncodesInProgressExitWarningTitle" xml:space="preserve">
-    <value>Enkodierung im Gange</value>
+    <value>Encodierung im Gange</value>
   </data>
   <data name="ForeignAudioSearch" xml:space="preserve">
     <value>Ausländische Audio Suche</value>
@@ -283,10 +283,10 @@
     <value>{0} Spuren</value>
   </data>
   <data name="SaveChangesPresetMessage" xml:space="preserve">
-    <value>Möchten Sie die Änderungen in Ihren aktuellen Voreinstellung speichern?</value>
+    <value>Möchten Sie die Änderungen in Ihrer aktuellen Voreinstellung speichern?</value>
   </data>
   <data name="SaveChangesPresetTitle" xml:space="preserve">
-    <value>Speichern der aktuelle Voreinstellung?</value>
+    <value>Die aktuelle Voreinstellung speichern?</value>
   </data>
   <data name="DiscNotInDriveError" xml:space="preserve">
     <value>Kann nicht zum Verarbeiten geladen werden. Die Disc befindet sich nicht mehr im Laufwerk.</value>
@@ -331,46 +331,46 @@
     <value>Abgeschlossene ({0})</value>
   </data>
   <data name="StoppedEncoding" xml:space="preserve">
-    <value>Codierung beendet.</value>
+    <value>Encodierung beendet.</value>
   </data>
   <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
-    <value>Sind Sie sicher, dass Sie Quelldatei(en)/Ordner {0} löschen möchten?</value>
+    <value>Sind Sie sicher, dass Sie die Quelldatei(en)/Ordner {0} löschen möchten?</value>
   </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
-    <value>Löschen bestätigen</value>
+    <value>Wirklich löschen?</value>
   </data>
   <data name="CouldNotDeleteFile" xml:space="preserve">
     <value>{0} {1} konnte nicht gelöscht werden.</value>
   </data>
   <data name="QueueMultipleScanErrorMessage" xml:space="preserve">
-    <value>Die folgenden Dateien konnte nicht erkannt werden und wurden nicht der Warteschlange hinzugefügt: {0}</value>
+    <value>Die folgende(n) Datei(en) konnte(n) nicht erkannt werden und wurde(n) der Warteschlange deshalb nicht hinzugefügt: {0}</value>
   </data>
   <data name="QueueMultipleScanErrorTitle" xml:space="preserve">
-    <value>Fehler bein scannen der Video-Dateien</value>
+    <value>Fehler beim Scannen der Video-Dateien</value>
   </data>
   <data name="StartedEncoding" xml:space="preserve">
-    <value>Beginn die Codierung.</value>
+    <value>Encodierung wurde gestartet.</value>
   </data>
   <data name="DirectoryCreateErrorMessage" xml:space="preserve">
-    <value>Das Abgabeverzeichnis konnte nicht erstellt werden. Fehlerdetails: {0}</value>
+    <value>Das Ausgabeverzeichnis konnte nicht erstellt werden. Fehlerdetails: {0}</value>
   </data>
   <data name="DirectoryCreateErrorTitle" xml:space="preserve">
     <value>Fehler beim Erstellen des Verzeichnisses</value>
   </data>
   <data name="EncodeCompleted" xml:space="preserve">
-    <value>Codieren abgeschlossen.</value>
+    <value>Encodierung abgeschlossen.</value>
   </data>
   <data name="EncodeCompleteBalloonTitle" xml:space="preserve">
-    <value>Codierung abgeschlossen</value>
+    <value>Encodieren abgeschlossen</value>
   </data>
   <data name="EncodeCompleteBalloonMessage" xml:space="preserve">
-    <value>VidCoder hat alle Enkodierungsaufträge aus der Warteschlange fertig gestellt.</value>
+    <value>VidCoder hat alle Encodierungsaufträge aus der Warteschlange fertig gestellt.</value>
   </data>
   <data name="OutputFolderRequiredMessage" xml:space="preserve">
-    <value>Es kann kein Enkodierungsauftrag erstellt werden ohne, dass ein Ausgabeordner als Standard festgelegt wurde. Drücken Sie OK, um einen auszuwählen.</value>
+    <value>Es kann kein Encodierungsauftrag erstellt werden ohne, dass ein Ausgabeordner als Standard festgelegt wurde. Drücken Sie OK, um einen auszuwählen.</value>
   </data>
   <data name="OutputFolderRequiredTitle" xml:space="preserve">
-    <value>Ein Standard-Ausgabe-Ordner ist erforderlich</value>
+    <value>Ein Standard-Ausgabeordner ist erforderlich</value>
   </data>
   <data name="OutputPathNotValidMessage" xml:space="preserve">
     <value>Der Ausgabepfad ist nicht gültig.</value>
@@ -379,7 +379,7 @@
     <value>Pfad ist ungültig</value>
   </data>
   <data name="Encode" xml:space="preserve">
-    <value>Codieren</value>
+    <value>Encodieren</value>
   </data>
   <data name="Resume" xml:space="preserve">
     <value>Fortsetzen</value>
@@ -433,10 +433,10 @@
     <value>Video-Datei...</value>
   </data>
   <data name="SourceOption_DiscFolder" xml:space="preserve">
-    <value>DVD/Blu-Ray-Ordner...</value>
+    <value>DVD/Blu-ray-Ordner...</value>
   </data>
   <data name="NewVersionDownloadStartedStatus" xml:space="preserve">
-    <value>Version {0} steht zur Verfügung. Update-Download hat begonnen.</value>
+    <value>Version {0} steht zur Verfügung. Das Update wird bereits heruntergeladen.</value>
   </data>
   <data name="NewVersionDownloadFinishedStatus" xml:space="preserve">
     <value>Version {0} wurde vollständig herunterladen und wird beim Schließen installiert.</value>
@@ -448,16 +448,16 @@
     <value>Voreinstellung konnte nicht geladen werden: </value>
   </data>
   <data name="CouldNotSavePresetMessage" xml:space="preserve">
-    <value>Die Voreinstellung konnte nicht gespeichert werden "{0}": {1} {2}</value>
+    <value>Die Voreinstellung konnte nicht gespeichert werden '{0}':{1}{2}</value>
   </data>
   <data name="CouldNotCopyTextError" xml:space="preserve">
     <value>Text konnte nicht kopiert werden.</value>
   </data>
   <data name="LaunchUrlError" xml:space="preserve">
-    <value>Fehler beim Starten von URL: {0}</value>
+    <value>Fehler beim Öffnen der URL: {0}</value>
   </data>
   <data name="UserConfigLoadError" xml:space="preserve">
-    <value>Eine erforderliche Benutzer-Einstellungen-Datei konnte nicht geladen werden; sie ist möglicherweise beschädigt. Wollen Sie es löschen? Dies beeinträchtigt nicht Ihre gespeicherten Voreinstellungen.</value>
+    <value>Eine erforderliche Datei mit den Benutzer-Einstellungen konnte nicht geladen werden; sie ist möglicherweise beschädigt. Wollen Sie sie löschen? Ihre gespeicherten Voreinstellungen werden hiervon nicht beeinträchtigt.</value>
   </data>
   <data name="UserConfigLoadErrorTitle" xml:space="preserve">
     <value>Fehler beim Laden der Einstellungen</value>
@@ -469,28 +469,28 @@
     <value>Importfehler</value>
   </data>
   <data name="PresetImportSuccessMessage" xml:space="preserve">
-    <value>Voreinstellungen Erfolgreich importiert {0}.</value>
+    <value>Voreinstellung {0} erfolgreich importiert.</value>
   </data>
   <data name="PresetImportSuccessTitle" xml:space="preserve">
     <value>Erfolgreich</value>
   </data>
   <data name="PresetExportSuccessMessage" xml:space="preserve">
-    <value>Einstellungen erfolgreich exportieren {0}.</value>
+    <value>Voreinstellung erfolgreich nach {0} exportiert.</value>
   </data>
   <data name="PresetExportSuccessTitle" xml:space="preserve">
     <value>Erfolgreich</value>
   </data>
   <data name="ExportPresetFilePickerText" xml:space="preserve">
-    <value>Einstellungen exportieren</value>
+    <value>Voreinstellung exportieren</value>
   </data>
   <data name="PresetSaveConfirmMessage" xml:space="preserve">
     <value>Möchten Sie die Änderungen an Ihrer aktuellen Voreinstellung speichern?</value>
   </data>
   <data name="PresetSaveConfirmTitle" xml:space="preserve">
-    <value>Speichern der aktuelle Voreinstellung?</value>
+    <value>Aktuelle Voreinstellung speichern?</value>
   </data>
   <data name="PresetRevertConfirmMessage" xml:space="preserve">
-    <value>Sind Sie sicher, dass Sie alle nicht gespeicherte Änderungen rückgängig machen wollen?</value>
+    <value>Sind Sie sicher, dass Sie alle nicht gespeicherten Änderungen rückgängig machen wollen?</value>
   </data>
   <data name="PresetRevertConfirmTitle" xml:space="preserve">
     <value>Voreinstellung zurücksetzen</value>
@@ -499,13 +499,13 @@
     <value>Sind Sie sicher, dass Sie diese Voreinstellung entfernen möchten?</value>
   </data>
   <data name="PresetRemoveConfirmTitle" xml:space="preserve">
-    <value>Voreinstellungen entfernen</value>
+    <value>Voreinstellung entfernen</value>
   </data>
   <data name="UserConfigCorrupted" xml:space="preserve">
     <value>Die Konfiguration war beschädigt und konnte nicht geladen werden. Einige Ihrer Einstellungen wurden möglicherweise zurückgesetzt.</value>
   </data>
   <data name="OutputDirectoryPickerText" xml:space="preserve">
-    <value>Wählen Sie das Ausgabeverzeichnis für codierte Videodateien.</value>
+    <value>Wählen Sie das Ausgabeverzeichnis für encodierte Videodateien.</value>
   </data>
   <data name="LengthPreviewLabel" xml:space="preserve">
     <value>({0})</value>
@@ -526,13 +526,13 @@
     <value>Schließe Videoquelle</value>
   </data>
   <data name="UpdatesMenuItem" xml:space="preserve">
-    <value>Aktualisierungen...</value>
+    <value>Updates...</value>
   </data>
   <data name="CbrAuto" xml:space="preserve">
     <value>CBR-Auto</value>
   </data>
   <data name="RangeBarToolTip" xml:space="preserve">
-    <value>Mit der linken Maustaste legen Sie die Startzeit und mit der rechte Maustaste, die Endzeit festlegen.</value>
+    <value>Mit der linken Maustaste legen Sie die Startzeit und mit der rechten Maustaste die Endzeit fest.</value>
   </data>
   <data name="Preset_WindowsPhone8" xml:space="preserve">
     <value>Windows Phone 8</value>
@@ -547,7 +547,7 @@
     <value>Alle</value>
   </data>
   <data name="CouldNotCopyLogError" xml:space="preserve">
-    <value>Protokoll konnte nicht kopiert werden: {0} {0} {1}</value>
+    <value>Protokoll konnte nicht kopiert werden:{0}{0}{1}</value>
   </data>
   <data name="OpenLog" xml:space="preserve">
     <value>Protokoll öffnen</value>
