Updated HandBrake core to SVN 5714. A few CLI fixes.
--HG--
branch : beta

--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -169,7 +169,7 @@
     <value>Used columns</value>
   </data>
   <data name="ScanMultipleWindowTitle" xml:space="preserve">
-    <value>Scanning files...</value>
+    <value>Scanning...</value>
   </data>
   <data name="UpdateSuccessDialogTitle" xml:space="preserve">
     <value>Success</value>
