Added code to rescue tool windows which get placed outside of the visible screen area. Added a confirmation dialog to Stop if the encode has been going on for more than 5 minutes.
--HG--
branch : beta

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -597,4 +597,10 @@
 	<data name="QueueImportSuccessMessage" xml:space="preserve">
     <value>Successfully imported queue.</value>
   </data>
+	<data name="StopEncodeConfirmationTitle" xml:space="preserve">
+    <value>Stop encode?</value>
+  </data>
+	<data name="StopEncodeConfirmationMessage" xml:space="preserve">
+    <value>Are you sure you want to stop the encode?</value>
+  </data>
 </root>
