--- a/VidCoder/Resources/OptionsRes.resx
+++ b/VidCoder/Resources/OptionsRes.resx
@@ -396,4 +396,13 @@
   <data name="UseWorkerProcessCheckBox" xml:space="preserve">
     <value>Use worker process to encode</value>
   </data>
+	<data name="VideoSection" xml:space="preserve">
+    <value>Video</value>
+  </data>
+	<data name="DxvaDecodingCheckBox" xml:space="preserve">
+    <value>Enable DXVA Hardware Accelerated Decoding</value>
+  </data>
+	<data name="DxvaDecodingToolTip" xml:space="preserve">
+    <value>This option is only suitable for slower systems. Hardware decoders are currently designed for playback, not for re-encoding video so will likely bottleneck on faster systems.</value>
+  </data>
 </root>
