Added error message for Windows XP users rather than letting it crash.
--HG--
branch : beta

--- a/VidCoder/Resources/MiscRes.resx
+++ b/VidCoder/Resources/MiscRes.resx
@@ -218,4 +218,10 @@
   <data name="DisableUpdatesButton" xml:space="preserve">
     <value>Disable Updates</value>
   </data>
+	<data name="NoticeMessageTitle" xml:space="preserve">
+    <value>Notice</value>
+  </data>
+	<data name="WinXPError" xml:space="preserve">
+    <value>Windows XP support is currently broken. It is not known if or when it will be fixed.</value>
+  </data>
 </root>
