Added Rip DVD and Rip Blu-ray AutoPlay actions for Windows: now you can have VidCoder start up and scan a disc when you insert it.
--HG--
branch : beta

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -603,4 +603,7 @@
 	<data name="StopEncodeConfirmationMessage" xml:space="preserve">
     <value>Are you sure you want to stop the encode?</value>
   </data>
+	<data name="AutoplayDiscConfirmationMessage" xml:space="preserve">
+    <value>Close the current file and open the disc?</value>
+  </data>
 </root>
