--- a/VidCoder/Resources/CommonRes.resx
+++ b/VidCoder/Resources/CommonRes.resx
@@ -240,7 +240,10 @@ A full copy of the GNU General Public License has been included along with this 
   <data name="QueueColumnNamePreset" xml:space="preserve">
     <value>Preset</value>
   </data>
-	<data name="Success" xml:space="preserve">
+  <data name="Success" xml:space="preserve">
     <value>Success</value>
+  </data>
+	<data name="ConfirmDialogTitle" xml:space="preserve">
+    <value>Confirm</value>
   </data>
 </root>
