--- a/VidCoder/Resources/PreviewRes.resx
+++ b/VidCoder/Resources/PreviewRes.resx
@@ -180,4 +180,7 @@
   <data name="BottomMargin" xml:space="preserve">
     <value>Bottom Margin</value>
   </data>
+	<data name="PlaySourceDisabledNotFoundToolTip" xml:space="preserve">
+    <value>Could not find source file.</value>
+  </data>
 </root>
